2011-04-28  Chris Fleizach  <cfleizach@apple.com>

        Not reviewed. Add new expected results for GTK platform.

        ARIA role attribute implemented incorrectly; does not support token list with fallbacks
        https://bugs.webkit.org/show_bug.cgi?id=59648

        * platform/gtk/accessibility/aria-fallback-roles-expected.txt: Added.

2011-04-28  Pavel Feldman  <pfeldman@google.com>

        Not reviewed: unflake new inspector tests.

        * http/tests/inspector/resource-tree/resource-tree-reload.html:
        * http/tests/inspector/resource-tree/resource-tree-test.js:
        (initialize_ResourceTreeTest.InspectorTest.dumpResourcesURLMap):

2011-04-28  Jessie Berlin  <jberlin@apple.com>

        accessibility/aria-fallback-roles.html failing on Windows since introduction in r85157.
        https://bugs.webkit.org/show_bug.cgi?id=59701

        Add Windows-specific results to get the bots green.

        * platform/win/accessibility/aria-fallback-roles-expected.txt: Added.

2011-04-28  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: add ResourceTreeModel tests.
        https://bugs.webkit.org/show_bug.cgi?id=59616

        * http/tests/inspector/resource-tree-model-expected.txt: Removed.
        * http/tests/inspector/resource-tree-model.html: Removed.
        * http/tests/inspector/resource-tree/resource-tree-document-url-expected.txt: Added.
        * http/tests/inspector/resource-tree/resource-tree-document-url.html: Added.
        * http/tests/inspector/resource-tree/resource-tree-frame-navigate-expected.txt: Added.
        * http/tests/inspector/resource-tree/resource-tree-frame-navigate.html: Added.
        * http/tests/inspector/resource-tree/resource-tree-reload-expected.txt: Added.
        * http/tests/inspector/resource-tree/resource-tree-reload.html: Added.
        * http/tests/inspector/resource-tree/resource-tree-test.js: Added.